--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,13 +7,13 @@
   padding: 0;
   list-style-type: none;
   li {
-  display: block;
-  float: left;
+    display: block;
+    float: left;
     padding: 1px 7px;
     margin: 0px 3px 0px 0px;
-  background-color: $dark-color;
-  border-radius: 30px;
-  color: white;
+    background-color: $dark-color;
+    border-radius: 30px;
+    color: white;
   }
 }
 //INDEX----------------------------------
@@ -27,7 +27,7 @@ a {
   text-decoration: none;
   &:hover {
     text-decoration: none;
-    }
+  }
 }
 h2 {
   font-size: 50px;
@@ -37,8 +37,6 @@ p {
   font-size: 16px;
 }
 #profile {
-  padding-top: 1px;
-  margin-top: -1px;
   overflow: hidden;
   height: 100vh;
   min-height: 700px;
@@ -75,7 +73,6 @@ p {
   }
 }
 
-
 #portfolio {
   position: relative;
   width: 100%;
@@ -88,13 +85,13 @@ p {
   }
 }
 .portfolio-box {
-    max-width: 1160px;
-    height: auto;
-    margin: auto;
-    background-color: white;
-    //
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-  }
+  max-width: 1160px;
+  height: auto;
+  margin: auto;
+  background-color: white;
+  //
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
 .portfolio-top {
   padding: 70px 90px 50px 90px;
   overflow: auto;
@@ -154,7 +151,6 @@ p {
   margin: 20px 0px 20px 0px;
 }
 
-
 #contact {
   position: relative;
   height: 100vh;
@@ -172,9 +168,9 @@ p {
   }
 }
 .contact-box {
-    max-width: 1160px;
-    margin: auto;
-  }
+  max-width: 1160px;
+  margin: auto;
+}
 .contact-grid {
   padding: 50px 0px 0px 0px;
   overflow: auto;
@@ -324,5 +320,5 @@ p {
   }
   .portf-grid {
     padding: 0px 20px;
-}
+  }
 }
